--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,13 @@
+html, body{
+  height:100%;
+  width:100%;
+}
+
+body{
+  width:100%;
+}
+
+
 body, body > *{
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
@@ -9,7 +19,7 @@ body, body > *{
 	-webkit-box-align: start;
 	-webkit-padding-after: 0;
 	font-family:monospace;
-	display:inline;
+	display:block;
 	margin:0;
 	padding:0;
 }
@@ -42,17 +52,6 @@ textarea {
   height: 100%;
 }
 
-input{
-  width: 100%;
-  height: 100%;
-}
-
-label{
-  padding:0;
-  margin:0;
-  height:100%;
-  width:100%;
-}
 
 legend {
   padding: 0 5px;
